[gd_scene load_steps=5 format=3 uid="uid://bagom6wrf85bg"]

[ext_resource type="FontFile" uid="uid://k4gxhj0xxo5" path="res://sprites/bebas neue/DigitalDisplayRegular-ODEO.ttf" id="1_vnand"]
[ext_resource type="Script" path="res://survived.gd" id="1_yyigc"]
[ext_resource type="AudioStream" uid="uid://b27fo5g2sh4vk" path="res://audio/Fnaf 4 6 am.mp3" id="3_38rrd"]
[ext_resource type="AudioStream" uid="uid://dbsvc581mpfpr" path="res://audio/Voicy_dreamy saved by the bell (1) (mp3cut.net).mp3" id="4_yve3i"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yyigc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = -98.0
offset_right = 268.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.905882, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_vnand")
theme_override_font_sizes/font_size = 300
text = "6:00"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_38rrd")

[node name="SavedByTheBell" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yve3i")
volume_db = -15.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
